--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,8 @@ h2 {
 .message {
 	background-color: #fff;
 	border: 7px solid #273442;
-	height: 250px;
+	/*height: 250px;*/
+	height: 50%;
 	padding: 20px;
 }
 
